--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Appcelerator Slide Menu Application Template
 ============================================
 
-![ ](https://github.com/appcelerator-se/SE-Media/blob/master/Screenshots/SlideMenuTemplate/iOS/iphone-home.png?raw=true)
+![Screenshot](https://github.com/appcelerator-se/SE-Media/blob/master/Screenshots/SlideMenuTemplate/iOS/iphone-menu-open.png?raw=true)
 
 This application template provides a jumpstart to a simple app with a sliding menu.
 
